test: improve expressiveness with sequences access to results